# playground

./: .gitignore  README.md
book_recommender/html/: README.md  index.html  server.py  state.json
book_recommender/text/: README.md  book-recommender-build-spec.md  claude.py  data.py
btc/: LICENSE  README.md  btc.py  btc.yml  btc_model.py  pyabc_example.py  real_time_monitor.py
claude_recommender/book_recommender/: .gitignore  README.md  environment.yml  index.html  server.py
claude_recommender/text/: recommender.py  state.py
disk_inventory/: disk_inventory.py
energy_use/: README.md  energy_use.ipynb  energy_use2.ipynb  pyproject.toml
energy_use/data/: README.md
gps_data/: Morning_Run.fit  Morning_Run.gpx  README.md  gps.py  gps_comparison_map.html
jiaqi_papers/: Makefile  README.md  chapters.tex  compile_pdf  helpers.py  jiaqi_papers.ipynb  papers.csv  papers.db  papers_template.tex  translations_cache.json
jiaqi_papers/.virtual_documents/: jiaqi_papers.ipynb
llama/: README.md  llama.py
llm/: .gitignore  README.md  llm.env  llm.ipynb  llm.yml  llm_tests.ipynb  mmfm_agent1.py  mmfm_agent2.py  mmfm_agent3.py  schelling_embeddings.ipynb  schelling_embeddings2.py  temp.py  temp2.py  temp3.py  temp5.py
llm/data/: example_tweets.csv
llm/hands_on_llms/: README.md  chapter2.py  chapter3.py
llm/schelling_embeddings/: .gitignore  (+12 more)
maps/: giscrg_map.html  giscrg_map.ipynb
pram/: Dockerfile  docker_readme.txt  docker_run.sh  pram.py  pram2.py  pram3.py  requirements.txt
speed_reader/: README.md  speed_reader.py  speed_reader2.py  speed_reader3.py
(+10 files in other folders)
