[tool.poetry]
name = "energy_use"
version = "0.1.0"
description = ""
authors = ["Nick Malleson"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0"
geopandas = ">=1.1.2"
numpy = ">=1.24.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
